# wd

./: .clippy.toml  .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  build.rs
.github/: FUNDING.yaml  PULL_REQUEST_TEMPLATE.md
doc/: wd.md
src/: main.rs
src/doc/: wd.md
